# insurance-rag-chatbot

./: .dockerignore  .env.example  .gitignore  DEPLOY_VERCEL_RENDER.md  Dockerfile  Makefile  README.md  docker-compose.yml  env.example  main.py  prd.md  pyproject.toml  pytest.ini  reingest_healthcare.py  requirements.txt  start_web.py  test_fix.py  test_language_fix.py  test_performance.py  web_app.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cd.yml  docker-build.yml  release.yml
data/documents/: AIA_Health_Happy_plan1.txt  AIA_Health_Happy_plan2.txt  AIA_Health_Happy_plan3.txt  AIA_Health_Happy_plan4.txt  AIA_Health_happy_overview.txt  PRU_prime_Annuity_5_90.txt  PRUfamily_guard.txt  UOB_Healthy_Wealth_12_Bronze.txt  UOB_Healthy_Wealth_12_Diamond.txt  UOB_Healthy_Wealth_12_Gold.txt  UOB_Healthy_Wealth_12_Platinum.txt  UOB_Healthy_Wealth_12_Silver.txt  UOB_Healthy_Wealth_12_overview.txt  basic.txt  doc.txt  ethics.txt  focus_group_questions.txt  insurance_ethics_code.txt  summarize_healthcareplus.txt  uob_healthcareplus.txt  uob_rm_presentation_process.txt  uob_rm_workflow.txt  workflow.txt
data/indexes/faiss_index/: index.faiss  index.pkl
docs/: architecture.md  component_diagrams.md
requirements/: base.txt  discord.txt  test.txt  web.txt
src/: __init__.py
src/config/: __init__.py
src/core/: __init__.py  file_monitor.py  rag_system.py  semantic_splitter.py
src/core/utils/: __init__.py  langfuse_client.py
src/interfaces/: __init__.py
src/interfaces/terminal/: __init__.py  main.py
src/interfaces/web/: __init__.py  app.py
src/interfaces/web/static/css/: styles.css
src/interfaces/web/static/js/: coaching.js  dashboard.js  knowledge.js  main.js  simulation.js
src/interfaces/web/templates/: chat.html  coaching.html  dashboard.html  index.html  knowledge.html  login.html  simulation.html
tests/: README.md  __init__.py  conftest.py
tests/e2e/: __init__.py  test_original_performance.py  test_performance.py
tests/fixtures/: __init__.py  sample_documents.py
tests/integration/: __init__.py  test_api_endpoints.py  test_comparison_query_fix.py  test_language_fix.py
tests/unit/: __init__.py  test_language_detection.py  test_rag_system.py
